--- a/115434.html
+++ b/115434.html
@@ -257,7 +257,7 @@
                     <div class="content">
                         <ol>
                             <li>
-                                أولاً قم بمسح الكود التالي من جوالك أو قم بالضغط على <a href="https://www.omanhishopping.com/h5/register?uid=115434">رابط التسجيل</a> بدلا من مسح الكود وستنتقل مباشرة إلى صفحة التسجيل
+                                أولاً قم بمسح الكود التالي من جوالك أو قم بالضغط على <a href="https://www.omanhishopping.com/h5/register?uid=115434"  target="_blank" rel="noopener noreferrer">رابط التسجيل</a>  بدلا من مسح الكود وستنتقل مباشرة إلى صفحة التسجيل
                                 <img src="GuideSrc/UserImages/115434.jpg">
                             </li>
                             <li>قم بملء الحقول على النحو التالي:</li>
@@ -554,7 +554,7 @@
                     <div class="content">
                         <ol>
                             <li>
-                                First, scan the following code with your phone or click on the <a href="https://www.omanhishopping.com/h5/register?uid=115434">registration link</a> instead of scanning the code, and you will be redirected directly to the registration page
+                                First, scan the following code with your phone or click on the <a href="https://www.omanhishopping.com/h5/register?uid=115434" target="_blank" rel="noopener noreferrer">registration link</a> instead of scanning the code, and you will be redirected directly to the registration page
                                 <img src="GuideSrc/UserImages/115434.jpg">
                             </li>
                             <li>Fill in the fields as follows:</li>
